(30 Aug 2010) :    + mousedown event for faster droplist opening, + js css pointer    + bind all "li a" to prevent IE page jump    + added a "selected" setting to force initial value    + added setValue() public method    * fix .data('droplist') when used on select, to close all opened

--- a/trunk/_css/droplist.css
+++ b/trunk/_css/droplist.css
@@ -2,18 +2,19 @@
 .hide { display:none; }
 
 .droplist .droplist-value div, .droplist .droplist-value a.nogo {
-	display:inline-block; cursor:pointer; vertical-align:top; overflow:hidden;
+	display:inline-block; vertical-align:top; overflow:hidden;
 	margin:0; padding:0; border:0;
+	cursor: pointer;
 }
 
 /* Skin */
 .droplist .droplist-value div    {background:url(../_img/droplist_shadow.png)   0px -22px repeat-x; border-left: 1px solid #9DA7B8; }
 .droplist .droplist-value a.nogo {background:url(../_img/droplist_shadow.png) -22px -66px no-repeat;}
 
-.droplist { position:relative; margin:0; min-width:40px; color:#fff; font-size:12px; }
-.droplist .droplist-value { height:22px; line-height:20px; z-index:3003; }
+.droplist { position:relative; margin:0; color:#fff; font-size:12px; }
+.droplist .droplist-value { height:22px; line-height:20px; min-width:32px; z-index:3003; }
 .droplist .droplist-value div {
-	height:20px; line-height:18px; color:#000;
+	height:20px; line-height:18px; color:#000; min-width:16px;
 	padding:2px; padding-bottom:0px;
 }
 .droplist .droplist-value a.nogo {
